--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,11 +12,15 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, arm64]
 
     steps:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: |
+        ls
+        cd target 
+        ls
