--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }
-openssl = { version = "0.10", features = ["vendored"] }
+# openssl = { version = "0.10", features = ["vendored"] }
 tokio = { version = "1", features = ["full"] }
 futures = "0.3.15"
 lz-str = { git = "https://github.com/adumbidiot/lz-str-rs" }
@@ -17,3 +17,4 @@ sxd-xpath = "0.4.2"
 soup = "0.5.1"
 regex = "1.5.2"
 rust-crypto = "0.2.36"
+select = "0.5.0"
